--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=3000
-PGUSER=library_user
-PGPASSWORD=strongpassword123
+PGUSER=postgres
+PGPASSWORD=stronguser123
 PGDATABASE=library
 PGHOST=localhost
 PGPORT=5432
